--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,6 @@
   }
 
   .local {
-    --towerUrl: url(../../public/images/tower_test.svg);
     --missionUrl: url(../../public/images/our__mission.jpg);
   }
   .prod {
@@ -94,46 +93,29 @@
 }
 
 @layer base {
-  .header-l::before {
-    @apply content-[''] hidden xl:block;
-    position: absolute;
-    top: 0;
-    right: 400px;
-    background-image: var(--towerUrl);
-    height: 535px;
-    width: 257px;
-  }
-
   .clip-image {
-    background-image: var(--missionUrl);
-    background-position: -126px -48px;
-    background-size: 134%;
-    mask-image: radial-gradient(at 30%, #000 30%, #0000 70%);
-    -webkit-mask-image: radial-gradient(at -6% 41%, #000 32%, #0000 70%);
+    mask-image: radial-gradient(at 40%, #000 15%, #0000 70%);
+    -webkit-mask-image: radial-gradient(at 40%, #000 15%, #0000 70%);
   }
 
-  @media (max-width: 1279) {
-    .clip-image {
-      background-size: 160%;
-      background-repeat: no-repeat;
-    }
+  .clip-image-partnership {
+    mask-image: radial-gradient(
+      ellipse at center,
+      #000 0%,
+      transparent 70%,
+      #0000 70%
+    );
+    -webkit-mask-image: radial-gradient(
+      ellipse,
+      #000 0%,
+      transparent 70%,
+      #0000 70%
+    );
   }
-
-  @media (max-width: 1024) {
+  @media (max-width: 640px) {
     .clip-image {
-      background-size: 110%;
-      min-width: 374px;
-      background-image: var(--missionUrl);
-      mask-image: radial-gradient(at 30%, #000 30%, #0000 70%);
-      -webkit-mask-image: radial-gradient(at 32% 33%, #000 32%, #0000 71%);
-      background-position: -10px -217px;
-    }
-  }
-
-  @media (max-width: 768) {
-    .clip-image {
-      background-size: 120%;
-      background-position: -18px -100px;
+      mask-image: radial-gradient(at 50%, #000 15%, #0000 70%);
+      -webkit-mask-image: radial-gradient(at 50%, #000 15%, #0000 70%);
     }
   }
 }
@@ -147,6 +129,33 @@
   }
   .input-shadow {
     @apply shadow-[0px_4px_4px_#00000040];
+  }
+
+  .burger-button {
+    @apply p-0 bg-transparent border-none w-12 aspect-square relative shadow-none;
+
+    &::after {
+      content: '';
+
+      @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-1/2 h-0.5 bg-primary-foreground rounded-[5px] shadow-[0px_-8px_0px_0px_hsl(var(--primary-foreground)),0px_8px_0px_0px_hsl(var(--primary-foreground))];
+    }
+  }
+
+  .cross-button {
+    @apply p-0 bg-transparent border-none w-12 aspect-square relative shadow-none;
+
+    &::before,
+    &::after {
+      content: '';
+
+      @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-1/2 h-0.5 bg-primary-foreground rounded-[5px];
+    }
+    &::before {
+      @apply rotate-45;
+    }
+    &::after {
+      @apply -rotate-45;
+    }
   }
 }
 
