--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -323,6 +323,14 @@
       0 20px 30px 0 rgba(64, 100, 228, 0.3),
       inset 0 0 30px 0 rgba(255, 255, 255, 0.3);
   }
+
+  .landing-circle {
+    box-shadow: 0 0 86px 0 #ffe1ff, 0 0 172px 0 #564dd5, 0 0 250px 0 #564dd5,
+      0 350px 0 #564dd5, 0 0 400px 0 #564dd5,
+      inset 0 0 20px #ffe1ff;
+    border: 2px solid white;
+    clip-path: polygon(0 -100%, 100% -100%, 100% 30%, 0 30%);
+  }
 }
 
 @layer base {
