--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -326,10 +326,23 @@
 
   .landing-circle {
     box-shadow: 0 0 86px 0 #ffe1ff, 0 0 172px 0 #564dd5, 0 0 250px 0 #564dd5,
-      0 350px 0 #564dd5, 0 0 400px 0 #564dd5,
-      inset 0 0 20px #ffe1ff;
+      0 350px 0 #564dd5, 0 0 400px 0 #564dd5, inset 0 0 20px #ffe1ff;
     border: 2px solid white;
-    clip-path: polygon(0 -100%, 100% -100%, 100% 30%, 0 30%);
+    clip-path: polygon(0 -100%, 100% -100%, 100% 40%, 0 40%);
+  }
+
+  .accordion-wrapper {
+    & > section {
+      margin: unset !important;
+      padding: unset !important;
+
+      & > header {
+        margin: unset !important;
+      }
+      & > div {
+        padding: unset !important;
+      }
+    }
   }
 }
 
